<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fr_LL">

    <TextView
        style="@style/text_style_hourly"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/textHourly"/>
    <TextView
        style="@style/text_style_hourly"
        android:text="@string/textHourly1"/>
    <TextView
        style="@style/text_style_hourly"
        android:text="@string/textHourly11"/>
    <TextView
        style="@style/text_style_hourly"
        android:text="@string/textHourly2"/>
    <TextView
        style="@style/text_style_hourly"
        android:text="@string/textHourly3"/>
    <TextView
        style="@style/text_style_hourly"
        android:text="@string/textHourly4"/>
    <TextView
        style="@style/text_style_hourly"
        android:text="@string/textHourly5"/>
    <TextView
        style="@style/text_style_hourly"
        android:text="@string/textHourly6"/>
    <TextView
        style="@style/text_style_hourly"
        android:layout_marginBottom="8dp"
        android:text="@string/textHourly7"/>
    <ImageView
        style="@style/fr_IC"
        android:onClick="ic_event"
        android:src="@drawable/ic_event_available_black_24dp"/>
</LinearLayout>