<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fr_LL">

    <TextView
        style="@style/text_style_home"
        android:text="@string/textHome"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        style="@style/text_style_home"
        android:text="@string/textHome1" />

    <TextView
        style="@style/text_style_home"
        android:text="@string/textHome2" />

    <TextView
        style="@style/text_style_home"
        android:text="@string/textHome3" />

    <TextView
        style="@style/text_style_home"
        android:text="@string/textHome4" />

    <TextView
        style="@style/text_style_home"
        android:text="@string/textHome5" />

    <ImageView
        style="@style/fr_IC"
        android:onClick="ic_maps"
        android:src="@drawable/ic_map_black_24dp" />

    <TextView
        style="@style/text_style_home"
        android:text="@string/textHome8" />
</LinearLayout>