<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fr_LL">

    <TextView
        style="@style/text_style_contact"
        android:layout_marginTop="12dp"
        android:text="@string/textContact2" />

    <TextView
        style="@style/text_style_contact"
        android:text="@string/textContact" />

    <TextView
        style="@style/text_style_contact"
        android:layout_marginBottom="12dp"
        android:text="@string/textContact1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/accent_material_light_1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="112dp"
            android:layout_marginRight="112dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_phone_black_24dp" />

        <TextView
            android:id="@+id/ic_num"
            style="@style/text_style_contact"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:text="@string/textContact3" />
    </RelativeLayout>

    <TextView
        style="@style/text_style_contact"
        android:text="@string/textContact4" />

    <TextView
        android:id="@+id/mail"
        style="@style/text_style_contact"
        android:layout_marginBottom="24dp"
        android:linksClickable="true"
        android:text="@string/textContact5" />

    <TextView
        style="@style/text_style_contact"
        android:text="@string/textContact61" />

    <TextView
        android:id="@+id/url"
        style="@style/text_style_contact"
        android:layout_marginBottom="12dp"
        android:linksClickable="true"
        android:text="@string/textContact6" />
</LinearLayout>