<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fragargon.android.buzzinesscard.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/banner" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="clip_vertical"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            style="@style/button_style"
            android:onClick="btn1"
            android:text="@string/button1" />

        <Button
            style="@style/button_style"
            android:onClick="btn2"
            android:text="@string/button2" />

        <Button
            style="@style/button_style"
            android:onClick="btn3"
            android:text="@string/button3" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_container"
        android:layout_margin="12dp"
        android:padding="4dp" >

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/desc"
            android:scaleType="centerCrop"
            android:src="@drawable/resize_accueil" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/desc"
            android:scaleType="centerCrop"
            android:src="@drawable/resize_rr_moto" />
    </LinearLayout>

</LinearLayout>

